--- a/src/styles/css/pages/Home.module.css
+++ b/src/styles/css/pages/Home.module.css
@@ -10,16 +10,17 @@
   }
 
   .home_ban {
+    position: relative;
     display: flex;
-    align-items: center;
+    justify-content: center;
     height: 350px;
-    max-width: 1190px;
+    max-width: 1200px;
     margin: 0 auto;
   }
 
   .home_ban_img {
-    width: 1190px;
-    height: 300px;
+    width: 500px;
+    height: 280px;
     margin: 0 10px;
   }
 }
@@ -34,18 +35,17 @@
   }
 
   .home_ban {
+    position: relative;
     display: flex;
-    align-items: center;
-    height: 370px;
-    width: 83%; 
-    max-width: 1190px;
+    justify-content: center;
+    height: 350px;
+    max-width: 1200px;
     margin: 0 auto;
   }
 
-
   .home_ban_img {
-    width: 1190px;
-    height: 250px;
+    width: 500px;
+    height: 280px;
     margin: 0 10px;
   }
 }
@@ -60,16 +60,17 @@
   }
 
   .home_ban {
+    position: relative;
     display: flex;
-    height: 370px;
-    width: 83%;
-    max-width: 1190px;
+    justify-content: center;
+    height: 350px;
+    max-width: 1200px;
     margin: 0 auto;
   }
-  
+
   .home_ban_img {
-    width: 1190px;
-    height: 150px;
+    width: 500px;
+    height: 280px;
     margin: 0 10px;
   }
 } 
