--- a/src/styles/css/components/Banner/MainBanTwo.module.css
+++ b/src/styles/css/components/Banner/MainBanTwo.module.css
@@ -7,18 +7,20 @@
 @media screen and (min-width:1024px)  {
 .bantwo {
   position: relative;
-  width: 1200px;
-  height: 370px;
+  max-width: 1200px;
+  width: 100%;
+  height: 300px;
   margin: 0 auto;
 }
 
 .bantwo_eve {
   display: flex;
+  justify-content: center;
 } 
 
 .bantwo_pro {
   display: flex;
-  margin-right: 41px;
+  margin-left: 10px;
 }
 .bantwo_img {
   z-index: 10;
@@ -38,7 +40,7 @@
   justify-content: center;
   width: 300px;
   height: 195px;
-  /* margin-left: -57px; */
+  margin-left: -57px;
   background-color: whitesmoke;
   border-radius: 19px;
   font-family: 'Noto Sans KR', sans-serif;
@@ -65,18 +67,20 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
   .bantwo {
     position: relative;
-    width: 1200px;
-    height: 370px;
+    max-width: 1200px;
+    width: 100%;
+    height: 300px;
     margin: 0 auto;
   }
   
   .bantwo_eve {
     display: flex;
+    justify-content: center;
   } 
   
   .bantwo_pro {
     display: flex;
-    margin-right: 41px;
+    margin-left: 10px;
   }
   .bantwo_img {
     z-index: 10;
@@ -96,6 +100,7 @@
     justify-content: center;
     width: 300px;
     height: 195px;
+    margin-left: -57px;
     background-color: whitesmoke;
     border-radius: 19px;
     font-family: 'Noto Sans KR', sans-serif;
@@ -122,18 +127,20 @@
 @media screen and (max-width: 767px) {
   .bantwo {
     position: relative;
-    width: 1200px;
-    height: 370px;
+    max-width: 1200px;
+    width: 100%;
+    height: 300px;
     margin: 0 auto;
   }
   
   .bantwo_eve {
     display: flex;
+    justify-content: center;
   } 
   
   .bantwo_pro {
     display: flex;
-    margin-right: 41px;
+    margin-left: 10px;
   }
   .bantwo_img {
     z-index: 10;
@@ -153,6 +160,7 @@
     justify-content: center;
     width: 300px;
     height: 195px;
+    margin-left: -57px;
     background-color: whitesmoke;
     border-radius: 19px;
     font-family: 'Noto Sans KR', sans-serif;
