--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -14,7 +14,7 @@
     background-color: #fff;
   }
   
-  .logo {
+  .header_logo {
     display: flex;
     height: 110px;
     width: 100%;
@@ -26,7 +26,7 @@
     border-bottom: 2px solid #918D8C;
   }
   
-  .logo_text {
+  .header_logo_text {
     font-family: 'Nanum Pen Script', cursive;
     font-size: 47px;
     margin: 0 auto;
@@ -45,7 +45,7 @@
     background-color: #fff;
   }
   
-  .logo {
+  .header_logo {
     display: flex;
     height: 110px;
     width: 100%;
@@ -57,7 +57,7 @@
     border-bottom: 2px solid #918D8C;
   }
   
-  .logo_text {
+  .header_logo_text {
     font-family: 'Nanum Pen Script', cursive;
     font-size: 47px;
     margin: 0 auto;
@@ -87,7 +87,7 @@
   border-bottom: 2px solid #918D8C;
 }
 
-.logo_text {
+.header_logo_text {
   font-family: 'Nanum Pen Script', cursive;
   font-size: 43px;
   margin: 0 auto;
@@ -104,7 +104,7 @@
   height: 150px;
   background-color: #fff;
 }
-.logo {
+.header_logo {
   display: flex;
   height: 94px;
   width: 100%;
@@ -116,7 +116,7 @@
   border-bottom: 2px solid #918D8C;
 }
 
-.logo_text {
+.header_logo_text {
   font-family: 'Nanum Pen Script', cursive;
   font-size: 43px;
   margin: 0 auto;
