--- a/src/styles/css/commons/Title.module.css
+++ b/src/styles/css/commons/Title.module.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* Tiile.module.css */
 
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
@@ -18,7 +17,9 @@
   padding-top: 10px;
   font-size: 13px;
   font-family: 'Noto Sans KR', sans-serif;
-=======
+
+}
+
 .localUser-auth__header--title,
 .localUser-login__sns-title {
   font-weight: bold;
@@ -38,5 +39,4 @@
 .mypage-title {
   font-size: 30px;
   font-weight: 600;
->>>>>>> 198167de6853f2e796e2b57f7ecd55b5b6f924ee
 }
