메인 홈- 간식 찜,장바구니 모듈 연결 완료 , 네비바 이미지 수정

--- a/src/styles/css/commons/Image.module.css
+++ b/src/styles/css/commons/Image.module.css
@@ -10,3 +10,12 @@
 .img-100 {
   width: 100%;
 }
+
+/*nav_list 이미지 */
+.nav_list_img  {
+  width: 35px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+  padding-top: 5px;
+}
