--- a/src/styles/css/commons/Image.module.css
+++ b/src/styles/css/commons/Image.module.css
@@ -19,3 +19,12 @@
   padding-bottom: 10px;
   padding-top: 5px;
 }
+
+/*메인홈- 카테고리 이미지*/
+.category_img {
+  width: 70px;
+  height: 70px;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 50%;
+}
