--- a/src/styles/css/pages/Product/ProductDetail.module.css
+++ b/src/styles/css/pages/Product/ProductDetail.module.css
@@ -1,21 +1,21 @@
 .product-detail__view-wrap {
   width: 100%;
-  height: 300vh;
 }
 
 .product-detail__view-container {
-  position: relative;
+  padding-top: 20px;
 }
 
 .product-detail__view--information {
   width: 400px;
   position: relative;
-  left: calc(50% - 400px);
+  left: calc(50% - 450px);
 }
 
 .product-detail__view--PriceCard {
   position: fixed;
-  right: calc(50% - 500px);
+  right: calc(50% - 460px);
+  top: 230px;
   z-index: 10000;
 }
 
