홈베너 css 수정

--- a/src/styles/css/pages/Home.module.css
+++ b/src/styles/css/pages/Home.module.css
@@ -67,9 +67,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: 500px;
+    height: 540px;
     max-width: 1200px;
     margin: 0 auto;
+    padding-bottom: 52px;
   }
 
   .home_ban_img {
