--- a/src/styles/css/components/Card/ProductItem.module.css
+++ b/src/styles/css/components/Card/ProductItem.module.css
@@ -1,22 +1,24 @@
 .container-4columns {
   display: grid;
-  grid-template-columns: repeat(4,minmax(0,1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   grid-column-gap: 8px;
   grid-row-gap: 24px;
   row-gap: 28px;
-} /*필요한대로 추가해주세요*/
+} /*4열 그리드 필요한대로 추가해주세요*/
 
 .container-3columns {
   display: grid;
-  grid-template-columns: repeat(3,minmax(0,1fr));
+  grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-column-gap: 8px;
   grid-row-gap: 24px;
   row-gap: 28px;
-}
+} /*3열 그리드 필요한대로 추가해주세요*/
+
 .productItem {
   width: 100%;
   max-width: 90%;
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
   cursor: pointer;
 }
 
@@ -28,7 +30,7 @@
   position: relative;
 }
 
-.productItem__img__button{
+.productItem__img__button {
   position: absolute;
   background: rgba(217, 217, 217, 0.2);
   width: 20%;
@@ -45,7 +47,7 @@
 }
 
 .productItem__img__button__heart {
-  top:55%;
+  top: 53%;
   right: 10px;
 }
 .productItem__img__button__heart__fill {
@@ -53,7 +55,7 @@
 }
 
 .productItem__img__button__bag {
-  top: 80%;
+  top: 77%;
   right: 10px;
 }
 
@@ -64,11 +66,11 @@
 
 .productContent__productName {
   font-weight: 500;
-  margin:0px 0px 8px;
+  margin: 0px 0px 8px;
 }
 
-@media screen and (max-width : 768px) { 
-  .container-4columns{ 
-    grid-template-columns: repeat(2,minmax(0,1fr)); 
-  } 
+@media screen and (max-width: 768px) {
+  .container-4columns {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
