--- a/src/styles/css/components/Home/BestItem.module.css
+++ b/src/styles/css/components/Home/BestItem.module.css
@@ -13,14 +13,14 @@
     margin: 0 auto;
 }
 
-.header_text {
+.bestitem_header-text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
   color: #333;
 }
 
-.product {
+.bestitem_product {
   display: flex;
   justify-content: center;
 }
@@ -36,14 +36,14 @@
     margin: 0 auto;
 }
 
-.header_text {
+.bestitem_header-text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
   color: #333;
 }
 
-.product {
+.bestitem_product {
   display: flex;
   justify-content: center;
 }
@@ -59,14 +59,14 @@
     margin: 0 auto;
 }
 
-.header_text {
+.bestitem_header-text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
   color: #333;
 }
 
-.product {
+.bestitem_product {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
