신상품 클레스네임 bem 수정

--- a/src/styles/css/components/Home/NewItem.module.css
+++ b/src/styles/css/components/Home/NewItem.module.css
@@ -13,14 +13,14 @@
     margin: 0 auto;
 }
 
-.header_text {
+.newitem_header__text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
   color: #333;
 }
 
-.product {
+.newitem__product {
   display: flex;
   justify-content: center;
 }
@@ -36,14 +36,14 @@
     margin: 0 auto;
 }
 
-.header_text {
+.newitem_header__text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
   color: #333;
 }
 
-.product {
+.newitem__product {
   display: flex;
   justify-content: center;
 }
@@ -61,14 +61,14 @@
     margin: 0 auto;
 }
 
-.header_text {
+.newitem_header__text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
   color: #333;
 }
 
-.product {
+.newitem__product {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
