--- a/src/styles/css/components/Home/BestItem.module.css
+++ b/src/styles/css/components/Home/BestItem.module.css
@@ -13,7 +13,7 @@
     margin: 0 auto;
 }
 
-.bestitem_header-text {
+.bestitem_header__text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
@@ -36,7 +36,7 @@
     margin: 0 auto;
 }
 
-.bestitem_header-text {
+.bestitem_header__text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
@@ -59,7 +59,7 @@
     margin: 0 auto;
 }
 
-.bestitem_header-text {
+.bestitem_header__text {
   font-size: 18px;
   font-weight: bold;
   text-align: center;
