--- a/src/styles/css/commons/Image.module.css
+++ b/src/styles/css/commons/Image.module.css
@@ -12,7 +12,7 @@
 }
 
 /*nav_list 이미지 */
-.nav_list_img  {
+.product__list_img  {
   width: 35px;
   display: flex;
   flex-direction: column;
@@ -28,3 +28,4 @@
   text-align: center;
   border-radius: 50%;
 }
+
