--- a/src/styles/css/pages/Product/ProductDetail.module.css
+++ b/src/styles/css/pages/Product/ProductDetail.module.css
@@ -16,6 +16,8 @@
   position: fixed;
   right: calc(50% - 460px);
   top: 230px;
+  height: 300px;
+  margin: 20px 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -25,11 +27,10 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    padding: 0 30px 400px 30px;
     box-sizing: border-box;
   }
   .product-detail__view--PriceCard {
-    position: fixed;
+    position: static;
     bottom: 0;
     left: 0;
     display: flex;
