--- a/src/styles/css/components/Profile/Profile.module.css
+++ b/src/styles/css/components/Profile/Profile.module.css
@@ -1,6 +1,5 @@
 .container {
   margin: auto;
-  width: 90%;
 }
 
 div {
@@ -27,7 +26,7 @@ div {
 
 .setWidth-50 {
   width: 50%;
-} 
+}
 .setCursor {
   cursor: pointer;
 }
@@ -35,7 +34,7 @@ div {
 .leftTitle__user-box {
   margin: 30px 0px;
   width: 282px;
-  background: #FBFBFB;
+  background: #fbfbfb;
   border-radius: 8px;
 }
 
@@ -56,7 +55,7 @@ div {
   bottom: 0;
   margin: auto;
   font-size: 85px;
-  background: #D9D9D9;
+  background: #d9d9d9;
   border-radius: 50%;
 }
 
@@ -89,15 +88,15 @@ div {
   margin-right: 30px;
 }
 
-@media screen and (max-width : 1100px) {
+@media screen and (max-width: 1100px) {
   .flex-box__title {
     width: 60%;
   }
 }
 
-@media screen and (max-width : 768px) {
-  .flex-box__top  {
-   display: block;
+@media screen and (max-width: 768px) {
+  .flex-box__top {
+    display: block;
   }
 
   .flex-box__title {
@@ -105,8 +104,12 @@ div {
   }
 }
 
-@media screen and (max-width : 500px) {
+@media screen and (max-width: 500px) {
   .container {
-    width: 95%;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+  .flex-box__top {
+    display: block;
   }
 }
