--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -1,10 +1,10 @@
 /*Header.module.css*/
 
 /*font*/
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap");
 
 /* pc */
-@media screen and (min-width:1024px)  {
+@media screen and (min-width: 1024px) {
   .header {
     z-index: 30;
     position: relative; /*픽스로 고정*/
@@ -13,7 +13,7 @@
     max-width: 1200px;
     background-color: #fff;
   }
-  
+
   .header_logo {
     display: flex;
     height: 110px;
@@ -23,14 +23,12 @@
     padding-top: 15px;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 2px solid #918D8C;
+    border-bottom: 2px solid #918d8c;
   }
-  
- 
-} 
+}
 
 /*테블릿*/
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .header {
     z-index: 30;
     position: relative; /*픽스로 고정*/
@@ -39,7 +37,7 @@
     max-width: 1200px;
     background-color: #fff;
   }
-  
+
   .header_logo {
     display: flex;
     height: 110px;
@@ -49,58 +47,50 @@
     padding-top: 15px;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 2px solid #918D8C;
+    border-bottom: 2px solid #918d8c;
   }
-  
- 
-  
-} 
+}
 
 /*모바일*/
 @media screen and (max-width: 787px) {
   .header {
-  position: relative;
-  z-index: 30;
-  width: 100%;
-  height: 150px;
-  background-color: #fff;
-}
-.header_logo {
-  display: flex;
-  height: 94px;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-top: 13px;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 2px solid #918D8C;
-}
-
-
+    position: relative;
+    z-index: 30;
+    width: 100%;
+    height: 150px;
+    background-color: #fff;
+  }
+  .header_logo {
+    display: flex;
+    height: 94px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 13px;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #918d8c;
+  }
 }
 
 /* 아이폰 SE  */
-@media screen and (max-width : 576px) {
-    .header {
-  position: relative;
-  z-index: 30;
-  width: 100%;
-  height: 150px;
-  background-color: #fff;
+@media screen and (max-width: 576px) {
+  .header {
+    position: relative;
+    z-index: 30;
+    width: 100%;
+    height: 150px;
+    background-color: #fff;
+  }
+  .header_logo {
+    display: flex;
+    height: 94px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 13px;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #918d8c;
+  }
 }
-.header_logo {
-  display: flex;
-  height: 94px;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-top: 13px;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 2px solid #918D8C;
-}
-
-
-}
-
