--- a/src/styles/css/components/Product/Product.module.css
+++ b/src/styles/css/components/Product/Product.module.css
@@ -16,9 +16,9 @@ div {
 
 .base {
   width: 90%;
-  margin: 0px auto 0px auto;
+  margin: 50px auto;
   position: relative;
-  max-width: 1280px;
+  max-width: 1200px;
 }
 
 .filterBox {
