--- a/src/styles/css/commons/Title.module.css
+++ b/src/styles/css/commons/Title.module.css
@@ -1,6 +1,15 @@
 /* Tiile.module.css */
-
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
+/*font*/
+@font-face {
+  font-family: 'Nanum Pen Script';
+  src: url('../../font/NanumPenScript-Regular.woff') format('woff');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Noto Sans KR';
+  src: url('../../font/NotoSansKR-Regular.woff') format('woff');
+  font-display: swap;
+}
 
 /*베너 텍스트*/
 .banner_text{
@@ -9,12 +18,12 @@
   color: white;
   padding-top: 10px;
   font-size: 13px;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Noto Sans KR';
 }
 
 /*헤더 네임*/
 .header_logo_text {
-  font-family: 'Nanum Pen Script', cursive;
+  font-family: 'Nanum Pen Script';
   font-size: 47px;
   margin: 0 auto;
   color: #008e61;
