--- a/src/styles/css/components/Home/BestItem.module.css
+++ b/src/styles/css/components/Home/BestItem.module.css
@@ -1,7 +1,11 @@
 /*BestItem.module.css*/
 
 /*font*/
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
+@font-face {
+  font-family: 'Noto Sans KR';
+  src: url('../../font/NotoSansKR-Regular.woff') format('woff');
+  font-display: swap;
+}
 
 /* pc */
 @media screen and (min-width:1024px)  {
