--- a/src/styles/css/pages/TopMenu.module.css
+++ b/src/styles/css/pages/TopMenu.module.css
@@ -1,6 +1,11 @@
 /*TopMenu.module.css*/
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
+/*font*/
+@font-face {
+  font-family: 'Noto Sans KR';
+  src: url('../../font/NotoSansKR-Regular.woff') format('woff');
+  font-display: swap;
+}
 
 /* pc */
 @media screen and (min-width:1024px)  {
