git push origin eunha

--- a/src/styles/css/components/Banner/MainBanTwo.module.css
+++ b/src/styles/css/components/Banner/MainBanTwo.module.css
@@ -1,12 +1,5 @@
 /* MainBanTwo.module.css */
 
-/*font*/
-@font-face {
-  font-family: 'Noto Sans KR';
-  src: url('../../font/NotoSansKR-Regular.woff') format('woff');
-  font-display: swap;
-}
-
 /* pc */
 @media screen and (min-width:1024px)  {
 .bantwo {
@@ -73,13 +66,14 @@
     position: relative;
     max-width: 1200px;
     width: 100%;
-    height: 300px;
+    height: 530px;
     margin: 0 auto;
   }
   
   .bantwo_eve {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
   } 
   
   .bantwo_pro {
@@ -92,8 +86,8 @@
   }
   
   .bantwo_img_1 {
-    width: 299px;
-    height: 195px;
+    width: 200px;
+    height: 180px;
     border-radius: 19px;
   }
   
@@ -102,8 +96,8 @@
     flex-direction: column;
     align-items: end;
     justify-content: center;
-    width: 300px;
-    height: 195px;
+    width: 275px;
+    height: 180px;
     margin-left: -57px;
     background-color: whitesmoke;
     border-radius: 19px;
@@ -118,11 +112,11 @@
   }
   
   .info2 {
-    font-size: 24px;
+    font-size: 22px;
   }
   
   .info3 {
-    font-size: 26px;
+    font-size: 22px;
     font-weight: 700;
   }
 }
