--- a/src/styles/css/commons/Title.module.css
+++ b/src/styles/css/commons/Title.module.css
@@ -5,11 +5,6 @@
   src: url('../../font/NanumPenScript-Regular.woff') format('woff');
   font-display: swap;
 }
-@font-face {
-  font-family: 'Noto Sans KR';
-  src: url('../../font/NotoSansKR-Regular.woff') format('woff');
-  font-display: swap;
-}
 
 /*베너 텍스트*/
 .banner_text {
@@ -21,14 +16,15 @@
   font-family: 'Noto Sans KR';
 }
 
-/*헤더 네임*/
-.header_logo_text {
+/*로고*/
+.logo_text {
   font-family: 'Nanum Pen Script';
   font-size: 47px;
   margin: 0 auto;
   color: #008e61;
   cursor: pointer;
 };
+
 
 .localUser-auth__header--title,
 .localUser-login__sns-title {
