--- a/src/styles/css/components/Footer/Footer.module.css
+++ b/src/styles/css/components/Footer/Footer.module.css
@@ -1,17 +1,5 @@
 /*Footer.module.css*/
 
-/*font*/
-@font-face {
-  font-family: 'Nanum Pen Script';
-  src: url('../../font/NanumPenScript-Regular.woff') format('woff');
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Noto Sans KR';
-  src: url('../../font/NotoSansKR-Regular.woff') format('woff');
-  font-display: swap;
-}
-
 .footer {
   z-index: 20;
   position: relative;
@@ -30,7 +18,6 @@
   color: #666666;
   padding-bottom: 10px;
  font-size: 13px;
- font-family: 'Noto Sans KR', sans-serif;
  border-bottom: 1px solid #ddd;
 }
 
@@ -39,12 +26,16 @@
 }
 
 .footer_logo {
-    width: 81px;
-    font-family: 'Nanum Pen Script', cursive;
-    font-size: 32px;
-    margin: 0 auto;
-    color: #008e61;
+  display: flex;
+  height: 110px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 15px;
+  align-items: center;
+  justify-content: space-between;
 }
+
 
 .footer_desccontainer {
    display: flex;
@@ -84,11 +75,14 @@
   }
   
   .footer_logo {
-      width: 81px;
-      font-family: 'Nanum Pen Script', cursive;
-      font-size: 25px;
-      margin: 0 auto;
-      color: #008e61;
+    display: flex;
+    height: 110px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 15px;
+    align-items: center;
+    justify-content: space-between;
   }
   
   .footer_desccontainer {
