--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -69,6 +69,32 @@
 }
 
 .category_ul {
+  display: grid;
+ grid-template-columns: 150px 150px 150px 150px;
+ justify-content: center;
+}
+  .category_item {
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 10px;
+    list-style-type : none;
+    
+  }
+
+}
+
+/* 아이폰 SE  */
+@media screen and (max-width: 576px) {
+  .category {
+    position: relative;
+    top: 25px;
+    max-width:1200px;
+    height: 240px;
+    margin: 0 auto;
+    font-size: 12px;
+}
+
+.category_ul {
   grid-template-columns: repeat(2, 100px 1fr);
   display: grid;
 }
