Design: 상품 상세정보 페이지 디자인 버그 수정

--- a/src/styles/css/components/Card/Detail/ProductDetailPriceCard.module.css
+++ b/src/styles/css/components/Card/Detail/ProductDetailPriceCard.module.css
@@ -1,6 +1,6 @@
 @media (max-width: 1024px) {
   .product-detail__wrap {
-    width: 70%;
+    width: 0%;
   }
   .product-detail__btn {
     display: flex;
@@ -9,7 +9,7 @@
 }
 
 .product-detail__wrap {
-  min-width: 400px;
+  width: 400px;
   background-color: white;
   padding: 1px 30px 30px 30px;
   border-radius: 7px;
