메인홈 카테고리 반응형 수정

--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -5,7 +5,7 @@
   .category {
     position: relative;
     top: 25px;
-    width: 1200px;
+    max-width: 1200px;
     height: 200px;
     margin: 0 auto;
   }
