Design: 모디파이 반응형 디자인 수정

--- a/src/styles/css/commons/Input.module.css
+++ b/src/styles/css/commons/Input.module.css
@@ -1,26 +1,25 @@
 /*Input.module.css*/
 
 /* pc */
-@media screen and (min-width:1024px)  {
-  /*검색창*/
-.searchInput {
-  width: 200px;
-  height: 26px;
-  font-size: 11px;
-  border: 1px solid #008e61;
- }
-
-}
-
-/*테블릿*/
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width: 1024px) {
   /*검색창*/
   .searchInput {
     width: 200px;
     height: 26px;
     font-size: 11px;
     border: 1px solid #008e61;
-   }
+  }
+}
+
+/*테블릿*/
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  /*검색창*/
+  .searchInput {
+    width: 200px;
+    height: 26px;
+    font-size: 11px;
+    border: 1px solid #008e61;
+  }
 }
 
 /*모바일*/
@@ -31,17 +30,17 @@
     height: 26px;
     font-size: 11px;
     border: 1px solid #008e61;
-   }
+  }
 }
 
 .localUser-login__email {
   margin-bottom: 20px;
 }
 
-.delivery-register__input--address,
-.delivery-register__input,
-.modify-password__current,
-.modify-password_new,
+/* .delivery-register__input--address,
+.delivery-register__input, */
+/* .modify-password__current,
+.modify-password_new, */
 .delivery-input__name,
 .delivery-input__mainAddress,
 .delivery-input__subAddress,
