--- a/src/styles/css/commons/Title.module.css
+++ b/src/styles/css/commons/Title.module.css
@@ -1,8 +1,8 @@
 /* Tiile.module.css */
 /*font*/
 @font-face {
-  font-family: 'Nanum Pen Script';
-  src: url('../../font/NanumPenScript-Regular.woff') format('woff');
+  font-family: "Nanum Pen Script";
+  src: url("../../font/NanumPenScript-Regular.woff") format("woff");
   font-display: swap;
 }
 
@@ -13,18 +13,17 @@
   color: white;
   padding-top: 10px;
   font-size: 13px;
-  font-family: 'Noto Sans KR';
+  font-family: "Noto Sans KR";
 }
 
 /*로고*/
 .logo_text {
-  font-family: 'Nanum Pen Script';
+  font-family: "Nanum Pen Script";
   font-size: 47px;
   margin: 0 auto;
   color: #008e61;
   cursor: pointer;
-};
-
+}
 
 .localUser-auth__header--title,
 .localUser-login__sns-title {
@@ -50,4 +49,9 @@
 .profile_mypage {
   font-size: 25px;
   font-weight: 600;
+}
+
+.no_page--title {
+  font-size: 100px;
+  font-weight: bold;
 }
