폰트 최적화

--- a/src/styles/css/components/Banner/MainBanTwo.module.css
+++ b/src/styles/css/components/Banner/MainBanTwo.module.css
@@ -1,5 +1,8 @@
 /* MainBanTwo.module.css */
 
+/* font */
+@import url("../../../font/font.module.css");
+
 /* pc */
 @media screen and (min-width: 1024px) {
   .bantwo {
