--- a/src/styles/css/commons/Title.module.css
+++ b/src/styles/css/commons/Title.module.css
@@ -1,10 +1,5 @@
 /* Tiile.module.css */
-/*font*/
-@font-face {
-  font-family: "Nanum Pen Script";
-  src: url("../../font/NanumPenScript-Regular.woff") format("woff");
-  font-display: swap;
-}
+@import url("../../font/font.module.css");
 
 /*베너 텍스트*/
 .banner_text {
